style-main: more styling

--- a/assets/styles/scss/abstracts/_breakpoints.scss
+++ b/assets/styles/scss/abstracts/_breakpoints.scss
@@ -1,5 +1,5 @@
 // -----------------------------------------------------------------------------
-// *  _breakpoints.scss: This partial file contains all Scss 'breakpoints'.
+// +  _breakpoints.scss: This partial file contains all Scss 'breakpoints'.
 // -----------------------------------------------------------------------------
 
 @mixin breakpoint($breakpoint) {
