--- a/assets/styles/scss/abstracts/_mixins.scss
+++ b/assets/styles/scss/abstracts/_mixins.scss
@@ -1,5 +1,5 @@
 // -----------------------------------------------------------------------------
-// *  _mixins.scss: This partial file contains all Scss 'mixins'.
+// +  _mixins.scss: This partial file contains all Scss 'mixins'.
 // -----------------------------------------------------------------------------
 
 // -----------------------------------------------------------------------------
