--- a/assets/styles/scss/abstracts/_transitions.scss
+++ b/assets/styles/scss/abstracts/_transitions.scss
@@ -1,3 +1,3 @@
 // -----------------------------------------------------------------------------
-// +  _animations.scss: This partial file contains all Scss 'animations'.
+// +  _transitions.scss: This partial file contains all Scss 'transitions'.
 // -----------------------------------------------------------------------------
