--- a/assets/styles/scss/base/_typography.scss
+++ b/assets/styles/scss/base/_typography.scss
@@ -1,5 +1,5 @@
 /* -------------------------------------------------------------------------- *\
-*  This partial file contains all application-wide 'typography'.
++  _typography.scss: This partial file contains all application-wide 'typography'.
 \* -------------------------------------------------------------------------- */
 
 /*
