--- a/assets/styles/scss/abstracts/_functions.scss
+++ b/assets/styles/scss/abstracts/_functions.scss
@@ -1,3 +1,3 @@
 // -----------------------------------------------------------------------------
-// *  _functions.scss: This partial file contains all Scss 'functions'.
+// +  _functions.scss: This partial file contains all Scss 'functions'.
 // -----------------------------------------------------------------------------
