--- a/assets/styles/scss/base/_base.scss
+++ b/assets/styles/scss/base/_base.scss
@@ -8,7 +8,7 @@ body {
   color: var(--foreground-color);
   font-family: 'Roboto', sans-serif;
   font-size: 1rem;
-  // font-size: calc(1rem + 0.25vh);
+  // font-size: calc(1rem + 0.25vh); // ---> Good idea?
   font-weight: 300;
   line-height: 1.5;
 }
