--- a/assets/styles/scss/abstracts/_variables.scss
+++ b/assets/styles/scss/abstracts/_variables.scss
@@ -33,6 +33,8 @@ $max-width: $dimension--xxl;
 
 // -  <<----------<< Generic Font Related >>---------->>
 
+// #  Responsive Font Scale
+
 $font-scale: 1.25;
 $font-size: 1rem; // 16px
 $font-size--1: $font-size; // 16px
@@ -66,6 +68,8 @@ $font-weight--text: 300;
 // -----------------------------------------------------------------------------
 // *  Other Variables
 // -----------------------------------------------------------------------------
+
+// -  <<----------<< Generic Font Related >>---------->>
 
 // -  <=======| Box-shadow |=======>
 $box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1);
