--- a/assets/styles/scss/base/_base.scss
+++ b/assets/styles/scss/base/_base.scss
@@ -2,13 +2,21 @@
 *  _base.scss: This partial file contains the custom `base` HTML tags
 \* -------------------------------------------------------------------------- */
 
+html {
+  // ...
+}
+
 body {
   margin: 0 auto;
   background-color: var(--background-color);
   color: var(--foreground-color);
   font-family: 'Roboto', sans-serif;
-  font-size: 1rem;
+  font-size: $font-size--text;
   // font-size: calc(1rem + 0.25vh); // ---> Good idea?
-  font-weight: 300;
+  font-weight: $font-weight--text;
   line-height: 1.5;
+}
+
+main {
+  // ...
 }
