--- a/assets/styles/scss/main.scss
+++ b/assets/styles/scss/main.scss
@@ -22,7 +22,7 @@
 /* -------------------------------------------------------------------------- *\
 +  Partial SCSS Group 3 - `base/`
 \* -------------------------------------------------------------------------- */
-@import 'base/reset';
+@import 'base/base';
 @import 'base/typography';
 
 /* -------------------------------------------------------------------------- *\
