--- a/assets/styles/scss/base/_typography.scss
+++ b/assets/styles/scss/base/_typography.scss
@@ -1,27 +1,67 @@
 /* -------------------------------------------------------------------------- *\
-+  _typography.scss: This partial file contains all application-wide 'typography'.
+*  _typography.scss: This partial file contains all application-wide 'typography'.
 \* -------------------------------------------------------------------------- */
 
-/*
+/* -------------------------------------------------------------------------- *\
 -  Headings
-*/
+\* -------------------------------------------------------------------------- */
 
-/*
+// #  <h1>
+h1 {
+  @include subject;
+}
+
+// #  <h2>
+h2 {
+  @include title;
+}
+
+// #  <h3>
+h3 {
+  @include subtitle;
+}
+
+/* -------------------------------------------------------------------------- *\
 -  Inline text elements
-*/
+\* -------------------------------------------------------------------------- */
 
-/*
+// #  <p>
+p {
+  @include text;
+}
+
+/* -------------------------------------------------------------------------- *\
 -  Abbreviations
-*/
+\* -------------------------------------------------------------------------- */
 
-/*
+// #  <abbr>
+
+/* -------------------------------------------------------------------------- *\
 -  Blockquotes
-*/
+\* -------------------------------------------------------------------------- */
 
-/*
+// #  <blockquote>
+
+// #  <q>
+
+// #  <cite>
+
+// #  <figure>
+
+// #  <figcaption>
+
+/* -------------------------------------------------------------------------- *\
 -  Lists
-*/
+\* -------------------------------------------------------------------------- */
 
-/*
--  Responsive font sizes
-*/
+// #  <li>
+
+// #  <ol>
+
+// #  <ul>
+
+/* -------------------------------------------------------------------------- *\
+-  Other
+\* -------------------------------------------------------------------------- */
+
+// #  <hr>
