--- a/assets/styles/scss/abstracts/_variables.scss
+++ b/assets/styles/scss/abstracts/_variables.scss
@@ -9,22 +9,22 @@
 // -  <<----------<< Sizes >>---------->>
 
 // #  Sizes
-$size--xxsm: 0.25rem; // 4px
-$size--xsm: 0.5rem; // 8px
-$size--sm: 1rem; // 16px
-$size--md: 1.5rem; // 24px
-$size--lg: 2rem; // 32px
+$size--xxs: 0.25rem; // 4px
+$size--xs: 0.5rem; // 8px
+$size--s: 1rem; // 16px
+$size--m: 1.5rem; // 24px
+$size--l: 2rem; // 32px
 $size--xl: 3rem; // 48px
 $size--xxl: 4rem; // 64px
 
 // -  <<----------<< Dimensions >>---------->>
 
 // #  Dimensions
-$dimension--xxsm: 20rem; // 320px
-$dimension--xsm: 40rem; // 640px
-$dimension--sm: 60rem; // 960px
-$dimension--md: 80rem; // 1280px
-$dimension--lg: 100rem; // 1600px
+$dimension--xxs: 20rem; // 320px
+$dimension--xs: 40rem; // 640px
+$dimension--s: 60rem; // 960px
+$dimension--m: 80rem; // 1280px
+$dimension--l: 100rem; // 1600px
 $dimension--xl: 120rem; // 1920px
 $dimension--xxl: 140rem; // 2240px
 
